--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
         role="navigation"
         aria-label="Main Navigation"
         id="navbar"
-        class="header__navbar"
+        class="navbar"
       >
-        <ul class="header__navbar-nav">
-          <li itemprop="name" class="header__nav-item">
+        <ul class="navbar__nav">
+          <li itemprop="name" class="navbar__nav-item">
             <a
               itemprop="url"
               href="#"
               aria-current="page"
-              class="header__nav-link"
+              class="navbar__nav-link"
               title="Home page"
               >home</a
             >
           </li>
-          <li itemprop="name" class="header__nav-item">
-            <a href="#" class="header__nav-link">blog</a>
+          <li itemprop="name" class="navbar__nav-item">
+            <a href="#" class="navbar__nav-link">blog</a>
           </li>
           <li class="header__nav-item dropdown">
             <a
@@ -92,31 +92,31 @@
               >services</a
             >
             <ul class="content">
-              <li itemprop="name" class="header__nav-item">
-                <a href="#" class="header__nav-link">web development</a>
+              <li itemprop="name" class="navbar__nav-item">
+                <a href="#" class="navbar__nav-link">web development</a>
               </li>
-              <li itemprop="name" class="header__nav-item">
-                <a href="#" class="header__nav-link">web design</a>
+              <li itemprop="name" class="navbar__nav-item">
+                <a href="#" class="navbar__nav-link">web design</a>
               </li>
-              <li itemprop="name" class="header__nav-item">
-                <a href="#" class="header__nav-link">app development</a>
+              <li itemprop="name" class="navbar__nav-item">
+                <a href="#" class="navbar__nav-link">app development</a>
               </li>
             </ul>
           </li>
-          <li itemprop="name" class="header__nav-item">
+          <li itemprop="name" class="navbar__nav-item">
             <a
               itemprop="url"
               href="#"
-              class="header__nav-link"
+              class="navbar__nav-link"
               title="About our company"
               >about us</a
             >
           </li>
-          <li itemprop="name" class="header__nav-item">
+          <li itemprop="name" class="navbar__nav-item">
             <a
               itemprop="url"
               href="#"
-              class="header__nav-link"
+              class="navbar__nav-link"
               title="Contact information"
               >contact us</a
             >
